crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__read_file_with_offset_numbers_from_start_line.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - Read src/lib.rs :100,$ · 0ms

     100 fn a() {}
     101 fn b() {}
     102 fn c() {}
     103

backgrounds:
.=reset  B=#070808  C=#111312
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
