crates/neenee-code/src/tui/render/snapshots/neenee_code__tui__render__snapshot_tests__tool_step_detail_overlay_renders_full_shell_output.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "rows.join(\"\\n\")"
---


  ┃Run cargo test · 0ms
  ┃
  ┃$ cargo test
  ┃running 3 tests
  ┃...
  ┃test result: ok. 3 passed
  ┃warning: unused import
  ┃
  ┃↑↓/wheel scroll · Esc close
  ┃
